Fix process lifetime management in BlobBytesProvider.

This both fixes BlobBytesProvider incorrectly calling
SuddenTerminationChanged from multiple threads, and adds calls to
AddRefProcess/ReleaseProcess.

The latter of those requires actually exposing that functionality to
blink, which is done through blink::Platform methods.

Bug: 776909
Change-Id: I5f61636f6907cb11f7e29d0cdde3c8a39a483996