third_party/WebKit/Source/platform/blob/BlobBytesProvider.cpp
@@ -5,6 +5,7 @@
 #include "platform/blob/BlobBytesProvider.h"
 
 #include "base/numerics/safe_conversions.h"
+#include "platform/CrossThreadFunctional.h"
 #include "platform/WebTaskRunner.h"
 #include "platform/wtf/Functional.h"
 #include "public/platform/Platform.h"
@@ -77,18 +78,37 @@ class BlobBytesStreamer {
   mojo::SimpleWatcher watcher_;
 };
 
+// This keeps the process alive while blobs are being transferred.
+// These need to be called on the main thread.
+void IncChildProcessRefCount() {
+  if (!Platform::Current()->MainThread()->IsCurrentThread()) {
+    Platform::Current()->MainThread()->GetWebTaskRunner()->PostTask(
+        FROM_HERE, CrossThreadBind(&IncChildProcessRefCount));
+    return;
+  }
+  Platform::Current()->SuddenTerminationChanged(false);
+  Platform::Current()->AddRefProcess();
+}
+
+void DecChildProcessRefCount() {
+  if (!Platform::Current()->MainThread()->IsCurrentThread()) {
+    Platform::Current()->MainThread()->GetWebTaskRunner()->PostTask(
+        FROM_HERE, CrossThreadBind(&DecChildProcessRefCount));
+    return;
+  }
+  Platform::Current()->SuddenTerminationChanged(true);
+  Platform::Current()->ReleaseRefProcess();
+}
+
 }  // namespace
 
 BlobBytesProvider::BlobBytesProvider(RefPtr<RawData> data) {
-  // TODO(mek): This is probably not enough to keep the renderer alive while
-  // data is being transferred. The IPC based blob code additionally calls
-  // ChildProcess::current()->AddRefProcess/ReleaseProcess.
-  Platform::Current()->SuddenTerminationChanged(false);
+  IncChildProcessRefCount();
   data_.push_back(std::move(data));
 }
 
 BlobBytesProvider::~BlobBytesProvider() {
-  Platform::Current()->SuddenTerminationChanged(true);
+  DecChildProcessRefCount();
 }
 
 void BlobBytesProvider::AppendData(RefPtr<RawData> data) {
